force-app/main/default/objects/Duress_Alarm__c/Duress_Alarm__c.object-meta.xml
<CustomObject>
    <label>Duress Alarm Testing</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Duress Alarm Test</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duress Alarm Testing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>