force-app/main/default/objects/Duress_Alarm__c/fields/Date_Tested__c.field-meta.xml
<CustomField>
    <fullName>Date_Tested__c</fullName>
    <label>Date Tested</label>
    <required>true</required>
    <type>Date</type>
</CustomField>