force-app/main/default/objects/Duress_Alarm__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>enrtcr__Site__c.enrtcr__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Duress Alarm Testing</relationshipLabel>
    <relationshipName>Duress_Alarm_Testing</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>