force-app/main/default/objects/Duress_Alarm__c/fields/Working__c.field-meta.xml
<CustomField>
    <fullName>Working__c</fullName>
    <label>Working</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>