force-app/main/default/objects/Duress_Alarm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Date_Tested__c</columns>
    <columns>Working__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>