force-app/main/default/objects/Duress_Alarm__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Date_Tested__c</columns>
    <columns>Working__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Maroubra,Bankstown,Penrith,Wollongong,Dee Why,Macquarie Park,Central Coast,Newcastle,Canberra,ACT,Blacktown</value>
    </filters>
    <label>NSW Sites</label>
</ListView>