force-app/main/default/objects/Duress_Alarm__c/listViews/QLD_Sites.listView-meta.xml
<ListView>
    <fullName>QLD_Sites</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Date_Tested__c</columns>
    <columns>Working__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Helensvale,Ipswich,Robina,Chermside,Gold Coast,Stones Corner,Springwood,North Lakes,Sunshine Coast,toowoomba</value>
    </filters>
    <label>QLD Sites</label>
</ListView>