force-app/main/default/objects/Duress_Alarm__c/listViews/VIC_sites.listView-meta.xml
<ListView>
    <fullName>VIC_sites</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Date_Tested__c</columns>
    <columns>Working__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Moonee Ponds,Briar Hill,Mulgrave,Surrey Hills,Mornington,Gippsland,Werribee,Adelaide,Geelong,Tasmania</value>
    </filters>
    <label>VIC/SA Sites</label>
</ListView>