force-app/main/default/objects/Duress_Alarm__c/listViews/WA_Sites.listView-meta.xml
<ListView>
    <fullName>WA_Sites</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Date_Tested__c</columns>
    <columns>Working__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>contains</operation>
        <value>inglewood,cockburn,Joondalup</value>
    </filters>
    <label>WA Sites</label>
</ListView>